// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CircleLoader11 Loader should render image avatar properly 1`] = `
<div>
  <div
    class="sc-gsTCUz ecHdod"
  >
    <div
      class="sc-bdfBwQ jYKpXM"
    />
  </div>
</div>
`;

exports[`CircleLoader11 Loader should render with all the props given 1`] = `
<div>
  <div
    class="sc-gsTCUz jQTQoX"
  >
    <div
      class="sc-bdfBwQ hRrWGF"
    />
  </div>
</div>
`;

exports[`CircleLoader11 Loader should render with default theme 1`] = `
<div>
  <div
    class="sc-gsTCUz cKEXNV"
  >
    <div
      class="sc-bdfBwQ jYKpXM"
    />
  </div>
</div>
`;
